<resources>
    <string name="app_name">Wizyty domowe</string>
    <string name="nav_search">Znajdź</string>
    <string name="nav_visits">Wizyty</string>
    <string name="nav_add_visit">Dodaj wizytę</string>
    <string name="nav_paramedic_medical_report">Moje zgłoszenia</string>
    <string name="nav_add_prescription">Dodaj receptę</string>
    <string name="nav_prescription">Recepty</string>
    <string name="nav_profile">Profil</string>
    <string name="unknown">UNKNOWN</string>
    <string name="nav_medical_report">Zgłoszenia</string>

    <string-array name="specializations">
        <item>Wszyscy</item>
        <item>Ginekolog</item>
        <item>Urolog</item>
        <item>Pediatra</item>
        <item>Laryngolog</item>
        <item>Psycholog</item>
    </string-array>


    <string name="email">E-mail</string>
    <string name="login_title">Logowanie</string>
    <string name="password">Hasło</string>
    <string name="registration_title">Rejestracja</string>
    <string name="name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="phoneNumber">Numer telefonu</string>
    <string name="birthday">Data urodzenia</string>
    <string name="passwordConfirmation">Potwierdzenie hasła</string>
    <string name="city">Miasto</string>
    <string name="street">Ulica</string>
    <string name="postalCode">Kod pocztowy</string>
    <string name="apartmentNumber">Numer lokalu</string>
    <string name="buildingNumber">Numer budynku</string>

    <string name="editEmail">Edytuj e-mail</string>
    <string name="editPhoneNumber">Edytuj numer telefonu</string>
    <string name="editAddress">Edytuj adres</string>
    <string name="editPassword">Edytuj hasło</string>
</resources>