<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.03" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineForm1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <com.google.android.material.card.MaterialCardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/titleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            android:layout_margin="24dp"
            app:cardElevation="8dp"
            android:foreground="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline_03">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="Dodawanie zgłoszenia"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="28sp"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/personalDataView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            android:padding="16dp"
            android:layout_marginBottom="40dp"
            android:layout_margin="24dp"
            app:cardElevation="8dp"
            android:foreground="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guidelineForm1"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="Wprowadź dane osobowe"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="24sp"/>

                <LinearLayout
                    android:id="@+id/layoutTextFieldFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/person_svgrepo_com"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxStrokeColor="@color/black"
                        app:hintTextColor="@color/black"
                        android:hint="@string/name"
                        app:errorEnabled="true"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textInputEditTextFirstName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutTextFieldFirstName"
                    app:boxStrokeColor="@color/black"
                    app:hintTextColor="@color/black"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:hint="@string/surname"
                    app:errorEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditTextLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/layoutTextFieldEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textInputLayoutLastName">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/email_svgrepo_com"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxStrokeColor="@color/black"
                        app:hintTextColor="@color/black"
                        android:hint="@string/email"
                        app:errorEnabled="true"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textInputEditTextEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutTextFieldPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutTextFieldEmail">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/phone_svgrepo_com"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxStrokeColor="@color/black"
                        app:hintTextColor="@color/black"
                        android:hint="@string/phoneNumber"
                        app:errorEnabled="true"
                        app:helperText="Zastosuj format: XXXXXXXXX"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textInputEditTextPhoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btn_next1"
                    android:layout_width="200dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/black"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_gravity="center"
                    android:text="Przejdź dalej"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutTextFieldPhoneNumber" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/descriptionView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            android:padding="16dp"
            android:layout_marginBottom="40dp"
            android:layout_margin="24dp"
            app:cardElevation="8dp"
            android:foreground="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guidelineForm1"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/status_information_svgrepo_com"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="Dodaj opis zgłoszenia"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="28sp"/>

                <LinearLayout
                    android:id="@+id/layoutTextFieldDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxStrokeColor="@color/black"
                        app:hintTextColor="@color/black"
                        android:hint="Opis zdarzenia"
                        app:errorEnabled="true"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textInputEditTextDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minLines="4"
                            android:gravity="top|start"
                            android:inputType="textMultiLine"
                            android:scrollbars="vertical"/>
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutButtonsDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutTextFieldDescription"
                    android:visibility="visible">

                    <Button
                        android:id="@+id/buttonPrevLogout"
                        android:layout_width="158dp"
                        android:layout_height="64dp"
                        android:layout_marginEnd="16dp"
                        android:textColor="@color/black"
                        android:text="Wróć"/>

                    <Button
                        android:id="@+id/buttonAddEmergencyLogout"
                        android:layout_width="158dp"
                        android:layout_height="64dp"
                        android:textColor="@color/black"
                        android:text="Dodaj zgłoszenie"/>

                </LinearLayout>

                <Button
                    android:id="@+id/addEmergencyButtonLogin"
                    android:layout_width="200dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="center"
                    android:text="Przejdź dalej"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutTextFieldDescription"
                    android:visibility="gone"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
